logs/dag_id=create_table_dag/run_id=manual__2024-09-21T18:36:15.075999+00:00/task_id=create_sum_table/attempt=1.log
[2024-09-21T18:36:17.386+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-09-21T18:36:17.490+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: create_table_dag.create_sum_table manual__2024-09-21T18:36:15.075999+00:00 [queued]>
[2024-09-21T18:36:17.526+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: create_table_dag.create_sum_table manual__2024-09-21T18:36:15.075999+00:00 [queued]>
[2024-09-21T18:36:17.532+0000] {taskinstance.py:2865} INFO - Starting attempt 1 of 2
[2024-09-21T18:36:17.612+0000] {taskinstance.py:2888} INFO - Executing <Task(SQLExecuteQueryOperator): create_sum_table> on 2024-09-21 18:36:15.075999+00:00
[2024-09-21T18:36:17.634+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=577) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-09-21T18:36:17.642+0000] {standard_task_runner.py:72} INFO - Started process 584 to run task
[2024-09-21T18:36:17.639+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'create_table_dag', 'create_sum_table', 'manual__2024-09-21T18:36:15.075999+00:00', '--job-id', '249', '--raw', '--subdir', 'DAGS_FOLDER/create_table_dag.py', '--cfg-path', '/tmp/tmp9leyr7op']
[2024-09-21T18:36:17.650+0000] {standard_task_runner.py:105} INFO - Job 249: Subtask create_sum_table
[2024-09-21T18:36:17.792+0000] {task_command.py:467} INFO - Running <TaskInstance: create_table_dag.create_sum_table manual__2024-09-21T18:36:15.075999+00:00 [running]> on host 6e2558f7c62d
[2024-09-21T18:36:17.938+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='create_table_dag' AIRFLOW_CTX_TASK_ID='create_sum_table' AIRFLOW_CTX_EXECUTION_DATE='2024-09-21T18:36:15.075999+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-21T18:36:15.075999+00:00'
[2024-09-21T18:36:17.940+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-09-21T18:36:17.943+0000] {sql.py:266} INFO - Executing: drop table if exists SUM;

create table SUM (
    cust_id varchar PRIMARY KEY,
    count decimal,
    sum numeric(2),
);
[2024-09-21T18:36:17.964+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-09-21T18:36:17.980+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-09-21T18:36:17.987+0000] {sql.py:509} INFO - Running statement: drop table if exists SUM;

create table SUM (
    cust_id varchar PRIMARY KEY,
    count decimal,
    sum numeric(2),
);, parameters: None
[2024-09-21T18:36:17.992+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 7: );
        ^

[2024-09-21T18:36:18.014+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=create_table_dag, task_id=create_sum_table, run_id=manual__2024-09-21T18:36:15.075999+00:00, execution_date=20240921T183615, start_date=20240921T183617, end_date=20240921T183618
[2024-09-21T18:36:18.033+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-09-21T18:36:18.034+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 249 for task create_sum_table (syntax error at or near ")"
LINE 7: );
        ^
; 584)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 7: );
        ^

[2024-09-21T18:36:18.053+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-09-21T18:36:18.078+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-21T18:36:18.080+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
